feat: added copy

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,17 @@
     <div class="mainContainer">
       <h1>Bo-Räknare</h1>
 
+      <p>
+        Välkommen till Bo-Räknare – din bästa vän vid bostadsköp! Beräkna enkelt
+        och snabbt nyckeltal som pris per kvadratmeter, belåningsgrad och
+        månadskostnad.
+      </p>
+
+      <p>
+        Få insikter om din ekonomiska styrka och hur du kan optimera ditt köp
+        genom att fylla i formuläret neda. Ingen data sparas, utan används bara
+        till uträkningarna.
+      </p>
       <form id="form">
         <div class="inputContainer">
           <div>
@@ -61,7 +72,7 @@
               <option value="50">50 %</option>
             </select>
           </div>
-          <input type="submit" class="button" value="Submit" />
+          <input type="submit" class="button" value="Räkna ut" />
         </div>
       </form>
       <h2>Lån</h2>
@@ -75,7 +86,7 @@
           <td id="paidDownPayment">0 kr</td>
         </tr>
         <tr>
-          <th>Belånat belopp som funktion av årsinkomst</th>
+          <th>Belåningsgrad</th>
           <td id="loanAsQuotaOfYearlyIncome">0</td>
         </tr>
         <tr>
