feat: fixed spelling

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             <input type="text" name="maintenance" id="maintenance" />
           </div>
           <div>
-            <label for="income">Hushållets måntaliga bruttoinkomst</label>
+            <label for="income">Hushållets månatliga bruttoinkomst</label>
             <input type="text" name="income" id="income" />
           </div>
           <div>
