--- a/public/index.html
+++ b/public/index.html
@@ -12,121 +12,114 @@
     <title>Räkna på bostadsfinansiering</title>
   </head>
   <body>
-    <div class="mainContainer">
-      <h1>Bo-Räknare</h1>
+    <h1>Bo-Räknare</h1>
 
-      <p>
-        Välkommen till Bo-Räknare – din bästa vän vid bostadsköp! Beräkna enkelt
-        och snabbt nyckeltal som pris per kvadratmeter, belåningsgrad och
-        månadskostnad.
-      </p>
+    <p>
+      Välkommen till Bo-Räknare – din bästa vän vid bostadsköp! Beräkna enkelt
+      och snabbt nyckeltal som pris per kvadratmeter, belåningsgrad och
+      månadskostnad.
+    </p>
 
-      <p>
-        Få insikter om din ekonomiska styrka och hur du kan optimera ditt köp
-        genom att fylla i formuläret neda. Ingen data sparas, utan används bara
-        till uträkningarna.
-      </p>
-      <form id="form">
-        <div class="inputContainer">
-          <div>
-            <label for="price">Bostadspris</label>
-            <input type="text" name="price" id="price" />
-          </div>
-          <div>
-            <label for="rent">Hyra</label>
-            <input type="text" name="rent" id="rent" />
-          </div>
-          <div>
-            <label for="maintenance">Underhållskostnad</label>
-            <input type="text" name="maintenance" id="maintenance" />
-          </div>
-          <div>
-            <label for="income">Hushållets månatliga bruttoinkomst</label>
-            <input type="text" name="income" id="income" />
-          </div>
-          <div>
-            <label for="interets">Ränta</label>
-            <select id="interets" name="interets">
-              <option value="1">1 %</option>
-              <option value="2">2 %</option>
-              <option value="3">3 %</option>
-              <option value="4">4 %</option>
-              <option value="5">5 %</option>
-              <option value="6">6 %</option>
-              <option value="7">7 %</option>
-              <option value="8">8 %</option>
-              <option value="9">9 %</option>
-              <option value="10">10 %</option>
-            </select>
-          </div>
-          <div>
-            <label for="downPayment">Handpenning</label>
-            <select id="downPayment" name="downPayment">
-              <option value="15">15 %</option>
-              <option value="20">20 %</option>
-              <option value="25">25 %</option>
-              <option value="30">30 %</option>
-              <option value="35">35 %</option>
-              <option value="40">40 %</option>
-              <option value="45">45 %</option>
-              <option value="50">50 %</option>
-            </select>
-          </div>
-          <input type="submit" class="button" value="Räkna ut" />
-        </div>
-      </form>
-      <h2>Lån</h2>
-      <table>
-        <tr>
-          <th>Belånat belopp</th>
-          <td id="borrowedSum">0 kr</td>
-        </tr>
-        <tr>
-          <th>Handpenning</th>
-          <td id="paidDownPayment">0 kr</td>
-        </tr>
-        <tr>
-          <th>Belåningsgrad</th>
-          <td id="loanAsQuotaOfYearlyIncome">0</td>
-        </tr>
-        <tr>
-          <th>% att amotera per år</th>
-          <td id="amortizationPerYear">0%</td>
-        </tr>
-      </table>
+    <p>
+      Få insikter om din ekonomiska styrka och hur du kan optimera ditt köp
+      genom att fylla i formuläret neda. Ingen data sparas. Vänligen uppge allt
+      i SEK.
+    </p>
+    <form id="form">
+      <div class="inputContainer">
+        <label for="price">Bostadspris</label>
+        <input type="text" name="price" id="price" />
 
-      <h2>Månatliga kostnader</h2>
-      <table>
-        <tr>
-          <th>Amortering</th>
-          <td id="amortizationPerMonth">0 kr</td>
-        </tr>
-        <tr>
-          <th>Räntebetalning</th>
-          <td id="interestPerMonth">0 kr</td>
-        </tr>
-        <tr>
-          <th>Hyra</th>
-          <td id="rentPerMonth">0 kr</td>
-        </tr>
-        <tr>
-          <th><b>Total kostnad per månad</b></th>
-          <td id="totalPerMonth"><b>0 kr</b></td>
-        </tr>
-        <tr>
-          <th><b>Total kostnad per månad ex ränteavdrag</b></th>
-          <td id="totalPerMonthExDeduction"><b>0 kr</b></td>
-        </tr>
-        <tr>
-          <th>Kostnad som andel av nettoinkomst</th>
-          <td id="costAsShareOfIncome">0%</td>
-        </tr>
-        <tr>
-          <th>Räntekostnad som andel av inkomst</th>
-          <td id="interestAsShareOfIncome">0%</td>
-        </tr>
-      </table>
-    </div>
+        <label for="rent">Hyra</label>
+        <input type="text" name="rent" id="rent" />
+
+        <label for="maintenance">Underhållskostnad</label>
+        <input type="text" name="maintenance" id="maintenance" />
+
+        <label for="income">Hushållets månatliga bruttoinkomst</label>
+        <input type="text" name="income" id="income" />
+
+        <label for="interets">Ränta</label>
+        <select id="interets" name="interets">
+          <option value="1">1 %</option>
+          <option value="2">2 %</option>
+          <option value="3">3 %</option>
+          <option value="4">4 %</option>
+          <option value="5">5 %</option>
+          <option value="6">6 %</option>
+          <option value="7">7 %</option>
+          <option value="8">8 %</option>
+          <option value="9">9 %</option>
+          <option value="10">10 %</option>
+        </select>
+
+        <label for="downPayment">Handpenning</label>
+        <select id="downPayment" name="downPayment">
+          <option value="15">15 %</option>
+          <option value="20">20 %</option>
+          <option value="25">25 %</option>
+          <option value="30">30 %</option>
+          <option value="35">35 %</option>
+          <option value="40">40 %</option>
+          <option value="45">45 %</option>
+          <option value="50">50 %</option>
+        </select>
+
+        <br />
+        <input type="submit" class="button" value="Räkna ut" />
+      </div>
+    </form>
+    <h2>Lån</h2>
+    <table>
+      <tr>
+        <th>Belånat belopp</th>
+        <td id="borrowedSum">0 kr</td>
+      </tr>
+      <tr>
+        <th>Handpenning</th>
+        <td id="paidDownPayment">0 kr</td>
+      </tr>
+      <tr>
+        <th>Belåningsgrad</th>
+        <td id="loanAsQuotaOfYearlyIncome">0</td>
+      </tr>
+      <tr>
+        <th>% att amotera per år</th>
+        <td id="amortizationPerYear">0%</td>
+      </tr>
+    </table>
+
+    <h2>Månatliga kostnader</h2>
+    <table>
+      <tr>
+        <th>Amortering</th>
+        <td id="amortizationPerMonth">0 kr</td>
+      </tr>
+      <tr>
+        <th>Räntebetalning</th>
+        <td id="interestPerMonth">0 kr</td>
+      </tr>
+      <tr>
+        <th>Hyra</th>
+        <td id="rentPerMonth">0 kr</td>
+      </tr>
+      <tr>
+        <th><b>Total kostnad per månad</b></th>
+        <td id="totalPerMonth"><b>0 kr</b></td>
+      </tr>
+      <tr>
+        <th><b>Total kostnad per månad ex ränteavdrag</b></th>
+        <td id="totalPerMonthExDeduction"><b>0 kr</b></td>
+      </tr>
+      <tr>
+        <th>Kostnad som andel av nettoinkomst</th>
+        <td id="costAsShareOfIncome">0%</td>
+      </tr>
+      <tr>
+        <th>Räntekostnad som andel av inkomst</th>
+        <td id="interestAsShareOfIncome">0%</td>
+      </tr>
+    </table>
     <footer>
       <div class="footerContainer">
         <div class="footerImageContainer">
@@ -134,7 +127,7 @@
             <img src="images\email.png" alt="email icon"
           /></a>
           <a
-            href="https://github.com/pajasthecat/real-income-presentor"
+            href="https://github.com/pajasthecat/house-price-calculator"
             ,
             target="_blank"
           >
