feat: added emoji

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
     <title>Räkna på bostadsfinansiering</title>
   </head>
   <body>
-    <h1>Bo-Räknare</h1>
+    <h1>Bo Räknare &#128116;</h1>
 
     <p>
-      Välkommen till Bo-Räknare – din bästa vän vid bostadsköp! Beräkna enkelt
-      och snabbt nyckeltal som pris per kvadratmeter, belåningsgrad och
-      månadskostnad.
+      Välkommen till Bo Räknare &#128116; – din bästa vän vid bostadsköp!
+      Beräkna enkelt och snabbt nyckeltal som pris per kvadratmeter,
+      belåningsgrad och månadskostnad.
     </p>
 
     <p>
