feat: added meta data

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Räkna ut nyckeltal vid köp av bostad." />
+    <meta property="og:title" content="Bo Räknare" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="./images/bo-raknare.png" />
+    <meta
+      property="og:image"
+      content="https://ia.media-imdb.com/images/rock.jpg"
+    />
     <link rel="icon" href="./images/home.png" />
     <link rel="stylesheet" href="./style/index.css" />
     <link
