feat: added more metadata

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,29 @@
     <meta name="description" content="Räkna ut nyckeltal vid köp av bostad." />
     <meta property="og:title" content="Bo Räknare" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="./images/bo-raknare.png" />
+    <meta
+      property="og:url"
+      content="https://bo-raknare.pages.dev/images/bo-raknare.png"
+    />
+    <meta
+      property="og:description"
+      content="Räkna ut nyckeltal vid köp av bostad."
+    />
     <meta
       property="og:image"
       content="https://ia.media-imdb.com/images/rock.jpg"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="bo-raknare.pages.dev" />
+    <meta property="twitter:url" content="https://bo-raknare.pages.dev/" />
+    <meta name="twitter:title" content="Bo Räknare" />
+    <meta
+      name="twitter:description"
+      content="Räkna ut nyckeltal vid köp av bostad."
+    />
+    <meta
+      name="twitter:image"
+      content="https://bo-raknare.pages.dev/images/bo-raknare.png"
     />
     <link rel="icon" href="./images/home.png" />
     <link rel="stylesheet" href="./style/index.css" />
