feat: chnaged image

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://bo-raknare.pages.dev/images/bo-raknare.png"
+      content="https://bo-raknare.pages.dev/images/bo-raknare.jpg"
     />
     <meta
       property="og:description"
@@ -28,7 +28,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://bo-raknare.pages.dev/images/bo-raknare.png"
+      content="https://bo-raknare.pages.dev/images/bo-raknare.jpg"
     />
     <link rel="icon" href="./images/home.png" />
     <link rel="stylesheet" href="./style/index.css" />
