feat: chnaged flat icon

--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,13 @@
       name="twitter:image"
       content="https://bo-raknare.pages.dev/images/bo-raknare.jpg"
     />
-    <link rel="icon" href="./images/home.png" />
+    <link rel="icon" href="./images/bo-raknare.png" />
     <link rel="stylesheet" href="./style/index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Räkna på bostadsfinansiering</title>
+    <title>Bo Räknare - din bästa vän vid bostadsköp!</title>
   </head>
   <body>
     <h1>Bo Räknare &#128116;</h1>
@@ -111,7 +111,7 @@
         <td id="loanAsQuotaOfYearlyIncome">0</td>
       </tr>
       <tr>
-        <th>% att amotera per år</th>
+        <th>Amorteringskrav i %</th>
         <td id="amortizationPerYear">0%</td>
       </tr>
     </table>
@@ -131,11 +131,11 @@
         <td id="rentPerMonth">0 kr</td>
       </tr>
       <tr>
-        <th><b>Total kostnad per månad</b></th>
+        <th><b>Total månadskostnad</b></th>
         <td id="totalPerMonth"><b>0 kr</b></td>
       </tr>
       <tr>
-        <th><b>Total kostnad per månad ex ränteavdrag</b></th>
+        <th><b>Total månadskostnad ex ränteavdrag</b></th>
         <td id="totalPerMonthExDeduction"><b>0 kr</b></td>
       </tr>
       <tr>
