feat: added new images

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://bo-raknare.pages.dev/images/bo-raknare.jpg"
+      content="https://bo-raknare.pages.dev/images/OG.jpg"
     />
     <meta
       property="og:description"
