feat: added image

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Bo Räknare" />
     <meta property="og:type" content="website" />
     <meta
-      property="og:url"
+      property="og:image"
       content="https://bo-raknare.pages.dev/images/OG.jpg"
     />
     <meta
