--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bo Räknare - din bästa vän vid bostadsköp!</title>
+    <meta name="title" content="Bo Räknare - din bästa vän vid bostadsköp!" />
     <meta name="description" content="Räkna ut nyckeltal vid köp av bostad." />
-    <meta property="og:title" content="Bo Räknare" />
+
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bo-raknare.pages.dev/" />
     <meta
-      property="og:image"
-      content="https://bo-raknare.pages.dev/images/OG.jpg"
+      property="og:title"
+      content="Bo Räknare - din bästa vän vid bostadsköp!"
     />
     <meta
       property="og:description"
       content="Räkna ut nyckeltal vid köp av bostad."
     />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="bo-raknare.pages.dev" />
-    <meta property="twitter:url" content="https://bo-raknare.pages.dev/" />
-    <meta name="twitter:title" content="Bo Räknare" />
     <meta
-      name="twitter:description"
+      property="og:image"
+      content="https://bo-raknare.pages.dev/images/OG.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://bo-raknare.pages.dev/" />
+    <meta
+      property="twitter:title"
+      content="Bo Räknare - din bästa vän vid bostadsköp!"
+    />
+    <meta
+      property="twitter:description"
       content="Räkna ut nyckeltal vid köp av bostad."
     />
     <meta
-      name="twitter:image"
-      content="https://bo-raknare.pages.dev/images/bo-raknare.jpg"
+      property="twitter:image"
+      content="https://bo-raknare.pages.dev/images/OG.png"
     />
     <link rel="icon" href="./images/bo-raknare.png" />
     <link rel="stylesheet" href="./style/index.css" />
@@ -32,7 +42,6 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Bo Räknare - din bästa vän vid bostadsköp!</title>
   </head>
   <body>
     <h1>Bo Räknare &#128116;</h1>
