feat: re-added metadata

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bo Räknare - din bästa vän vid bostadsköp!</title>
     <meta name="title" content="Bo Räknare - din bästa vän vid bostadsköp!" />
     <meta name="description" content="Räkna ut nyckeltal vid köp av bostad." />
