fix: fixed heading

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
         <label for="income">Hushållets månatliga bruttoinkomst</label>
         <input type="text" name="income" id="income" />
 
-        <label for="kvm">Kvadratmeter</label>
+        <label for="kvm">Antal kvadratmeter</label>
         <input type="text" name="kvm" id="kvm" />
 
         <label for="interets">Ränta</label>
