feat: added loantoIncome

--- a/public/index.html
+++ b/public/index.html
@@ -117,8 +117,12 @@
         <td id="paidDownPayment">0 kr</td>
       </tr>
       <tr>
-        <th>Belåningsgrad</th>
+        <th>Skuldkvot</th>
         <td id="loanAsQuotaOfYearlyIncome">0</td>
+      </tr>
+      <tr>
+        <th>Belåningsgrad</th>
+        <td id="loanToValueRatio">0 %</td>
       </tr>
       <tr>
         <th>Amorteringskrav i %</th>
@@ -157,11 +161,11 @@
     <h2>Övriga nyckeltal</h2>
     <table>
       <tr>
-        <th>Kostnad som andel av nettoinkomst</th>
+        <th>Månadskostnad som andel av nettoinkomst</th>
         <td id="costAsShareOfIncome">0%</td>
       </tr>
       <tr>
-        <th>Räntekostnad som andel av inkomst</th>
+        <th>Räntekvot</th>
         <td id="interestAsShareOfIncome">0%</td>
       </tr>
       <tr>
