feat: added scrolling

--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
         <input type="submit" class="button" value="Räkna ut" />
       </div>
     </form>
-    <h2>Lån</h2>
+    <h2 id="elementToScroll">Lån</h2>
     <table>
       <tr>
         <th>Belånat belopp</th>
