feat: added input mode

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
     <form id="form">
       <div class="inputContainer">
         <label for="price">Bostadspris</label>
-        <input type="text" name="price" id="price" />
+        <input type="text" inputmode="numeric" name="price" id="price" />
 
         <label for="rent">Hyra</label>
         <input type="text" name="rent" id="rent" />
