feat: added inputmode for all

--- a/public/index.html
+++ b/public/index.html
@@ -65,16 +65,21 @@
         <input type="text" inputmode="numeric" name="price" id="price" />
 
         <label for="rent">Hyra</label>
-        <input type="text" name="rent" id="rent" />
+        <input type="text" inputmode="numeric" name="rent" id="rent" />
 
         <label for="maintenance">Underhållskostnad</label>
-        <input type="text" name="maintenance" id="maintenance" />
+        <input
+          type="text"
+          inputmode="numeric"
+          name="maintenance"
+          id="maintenance"
+        />
 
         <label for="income">Hushållets månatliga bruttoinkomst</label>
-        <input type="text" name="income" id="income" />
+        <input type="text" inputmode="numeric" name="income" id="income" />
 
         <label for="kvm">Antal kvadratmeter</label>
-        <input type="text" name="kvm" id="kvm" />
+        <input type="text" inputmode="numeric" name="kvm" id="kvm" />
 
         <div id="sliderItem">
           <label for="interets">Ränta</label> <span id="interestValue"></span>
